--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-autoprefixer": "^2.0.0",
     "gulp-concat": "^2.4.1",
     "gulp-csso": "^1.0.0",
+    "gulp-foreach": "^0.1.0",
     "gulp-front-matter": "^1.2.2",
     "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^1.3.0",
@@ -20,6 +21,7 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-markdown": "^1.0.0",
     "gulp-marked": "^1.0.0",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
