--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-shell": "^0.4.2",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-stylus": "^2.2.0",
+    "gulp-surge": "^0.1.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.4",
     "merge-stream": "^0.1.7",
